discussion/kv_engine/167038/167038_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49786: Increase default number of AuxIO threads

<Pending toy build perf test results>

BackfillManagers are one-per-DcpProducer, but are limited in
concurrency by the number of AuxIO threads.

With 8 or fewer cores, currently a single AuxIO thread will be created.
This single thread must serve all backfills for all producers for
replication and other components. This has been seen to be insufficient
(MB-48693).

In heavy DGM, backfills will largely be IO bound so an increased
number running concurrently is not likely to add significant CPU
contention.

Change-Id: Ic752fef329c2e099e98689a5682c0957a577c680

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-12-06 14:39:42.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-06 14:59:37.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35840/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/executor/executorpool.cc:153:13:
error: no matching function for call to "clamp"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35840/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42254/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/executor/executorpool.cc(153): error C2672: "std::clamp": no matching overloaded function found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42254/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14376/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/executorpool.cc:153:13: error: no matching function for call to "clamp" [clang-diagnostic-error]
    count = std::clamp(count, 1, EP_MAX_AUXIO_THREADS);
            ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_algo.h:3675:5: note: candidate template ignored: deduced conflicting types for parameter "_Tp" ("unsigned long" vs. "int")
    clamp(const _Tp& __val, const _Tp& __lo, const _Tp& __hi)
    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_algo.h:3693:5: note: candidate function template not viable: requires 4 arguments, but 3 were provided
    clamp(const _Tp& __val, const _Tp& __lo, const _Tp& __hi, _Compare __comp)
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14376/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/executorpool.cc:153:13:
error: no matching function for call to "clamp" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14376/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4024/ : FAILURE

Compile error at [2021-12-06T14:54:18.295Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/executor/executorpool.cc:153:13:
error: no matching function for call to "clamp"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4024/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16297/ : FAILURE

Compile error at [2021-12-06T14:56:09.439Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/executor/executorpool.cc:153:54:
error: no matching function for call to ?clamp(size_t&, int, const size_t&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16297/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16004/ : FAILURE

Compile error at [2021-12-06T14:55:21.320Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/executor/executorpool.cc:153:54:
error: no matching function for call to ?clamp(size_t&, int, const size_t&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16004/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24413/ : FAILURE

Compile error at [2021-12-06T14:56:39.420Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master@2/kv_engine/executor/executorpool.cc:153:13:
error: no matching function for call to "clamp"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24413/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15178/ : FAILURE

Compile error at [2021-12-06T14:41:57.509Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/executor/executorpool.cc:153:13:
error: no matching function for call to "clamp"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15178/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4082/ : FAILURE

Compile error at [2021-12-06T14:44:06.265Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@10/kv_engine/executor/executorpool.cc:153:54:
error: no matching function for call to ?clamp(size_t&, int, const size_t&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4082/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17075/ : FAILURE

Compile error at [2021-12-06T14:56:15.959Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/executor/executorpool.cc:153:13:
error: no matching function for call to "clamp"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17075/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13198/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
